# candl_data

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.rst  pyproject.toml
candl_data/: __init__.py  candl_data.py
candl_data/ACT_DR6_Lens_v1/: ACT_DR6_KK_lens_and_CMB.yaml
candl_data/SPT3G_2018_Lens_v0/: SPT3G_2018_PP_lens_and_CMB.yaml  SPT3G_2018_PP_lens_only.yaml
candl_data/SPT3G_2018_TTTEEE_v0/: SPT3G_2018_TTTEEE.yaml  SPT3G_2018_TTTEEE_lite_reconstruction.yaml
