[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "candl_data"
authors = [
    {name = "L. Balkenhol", email = "lennart.balkenhol@iap.fr"},
    {name = "C. Trendafilova", email = "ctrendaf@illinois.edu"},
    {name = "K. Benabed", email = "benabed@iap.fr"},
    {name = "S. Galli", email = "gallis@iap.fr"},
]

readme = "README.rst"
license = {file = "LICENCE.txt"}

dynamic = ["version", "description"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">=3.9"
